Fix desktop shop alignment

--- a/css/style.css
+++ b/css/style.css
@@ -657,6 +657,7 @@ html, body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 #buy-qty-selector {
